Incorporating hill functiona to compare with Tom's result
Tom had problems recreating the symmetric system in Goehring et al. Science, reason I found: rates reported there are wrong compared to Khuc Trong NPJ, on and off rates are exchanged.

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,9 @@ target/
 # pyenv
 .python-version
 
+# pickled files
+*.pickle
+
 # celery beat schedule file
 celerybeat-schedule
 
@@ -102,3 +105,6 @@ ENV/
 
 # Matlab files
 *.mat
+
+# Movies
+*.mp4
